syntax = "proto3";
package influxdata.iox.ingester.v1;
option go_package = "github.com/influxdata/iox/ingester/v1";

import "influxdata/pbdata/v1/influxdb_pb_data_protocol.proto";

service WriteService {
  rpc Write(WriteRequest) returns (WriteResponse);
}

message WriteRequest {
  influxdata.pbdata.v1.DatabaseBatch payload = 1;
}

message WriteResponse {}

service PersistService {
  rpc Persist(PersistRequest) returns (PersistResponse);
}

message PersistRequest {
  // The namespace to persist
  string namespace = 1;
}

message PersistResponse {}
